--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,8 +12,15 @@
 .header-icon {
   width: 100%;
   max-width: 80px;
-  height: 80px;
+  max-height: 80px;
+  min-width: 40px;
+  min-height: 40px;
   margin: 0 auto 0 0;
+}
+
+.header-icon a img {
+  width: 100%;
+  height: 100%;
 }
 
 .header-menu{
@@ -23,18 +30,22 @@
 }
 
 .header-menu-wrapper{
-  display: flex;
   justify-content: space-around;
 }
 
-a.header-menu-item  {
+.desktop-menu {
+  display: flex;
+  gap: 20px;
+}
+
+.desktop-menu a {
   color: #61dafb;
   font-weight: bold;
   transition: color 0.3s ease;
   padding: 0 10px;
 }
 
-a.header-menu-item:hover {
+.desktop-menu a:hover {
   color: #21a1f1;
 }
 
