--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -64,7 +64,7 @@
   /* position: fixed; */
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   padding: 0 0 20px 0;
   background-color: #1e1e2f;
@@ -74,6 +74,7 @@
   align-items: center;
   gap: 25px;
   z-index: 999;
+  animation: slideIn 1s ease forwards;
 }
 
 .mobile-menu a {
@@ -84,6 +85,17 @@
 
 .mobile-menu a:hover {
   color: #21a1f1;
+}
+
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 /*reponsive */
