--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -61,41 +61,36 @@
 }
 
 .mobile-menu {
-  /* position: fixed; */
-  top: 0;
+  position: fixed;
+  top: 100px; 
   left: 0;
-  height: 100vh;
   width: 100%;
-  padding: 0 0 20px 0;
+  height: calc(100vh - 100px);
   background-color: #1e1e2f;
+  padding: 40px 20px;
   display: flex;
   flex-direction: column;
+  gap: 20px;
+  z-index: 1000;
   justify-content: center;
-  align-items: center;
-  gap: 25px;
-  z-index: 999;
-  animation: slideIn 1s ease forwards;
+  text-align: center;
+  opacity: 0.95;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.mobile-menu.open{
+  transform: translateX(0);
 }
 
 .mobile-menu a {
   font-size: 1.5rem;
   color: #61dafb;
-  transition: color 0.3s ease;
+  transition: color 1s ease;
 }
 
 .mobile-menu a:hover {
   color: #21a1f1;
-}
-
-@keyframes slideIn {
-  from {
-    opacity: 0;
-    transform: translateX(-20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
 }
 
 /*reponsive */
