--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,22 @@
+html, body, #root {
+  height: 100%;
+}
 
+body {
+  background-color: lightslategray;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main-content {
+  flex: 1;
+}
