--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -28,12 +28,11 @@
   gap: 20px; 
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0 auto;
+  justify-content: flex-end;
 }
 
-.footer-list li {
-  margin: 0 0 0 auto;
-}
+
 
 .footer-list a {
   color: #61dafb;
@@ -64,11 +63,7 @@
 }
 
 .footer-list {
-    display: block;
-}
-
-.footer-list li {
-  margin: 0;
+    justify-content: center;
 }
  
 }
