--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #1e1e2f;
   color: #fff;
-  padding: 30px 20px;
+  padding: 15px 40px;
 }
 
 .footer-wrapper {
@@ -19,30 +19,42 @@
 }
 
 .footer-copy {
+  display: flex;
   font-size: 0.9rem;
   color: #aaa;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
+
 
 .footer-list {
   display: flex; 
-  gap: 20px; 
+  gap: 40px; 
   list-style: none;
   padding: 0;
   margin: 0 0 0 auto;
   justify-content: flex-end;
 }
 
-
-
-.footer-list a {
-  color: #61dafb;
-  text-decoration: none;
+.icon-link {
+  display: inline-block;
+  color: #999;
   transition: color 0.3s ease;
 }
 
-.footer-list a:hover {
-  color: #21a1f1;
+.icon-link:hover {
+  color: #f0f;
 }
+
+.icon {
+  width: 30px;
+  height: 30px;
+  fill: currentColor; 
+}
+
+/* Mobile*/
+
 
 @media screen and (max-width: 768px) {
  .footer {
@@ -65,5 +77,6 @@
 .footer-list {
     justify-content: center;
 }
+
  
 }
