--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ html, body, #root {
 }
 
 body {
-  background-color: lightslategray;
+  background-color: #2f3c4d ;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
