--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,4 @@
 .footer {
-  background-color: #1e1e2f;
   color: #fff;
   padding: 15px 40px;
 }
@@ -23,7 +22,6 @@
   font-size: 0.9rem;
   color: #bbb;
   height: 100%;
-  justify-content: center;
   align-items: center;
 }
 
@@ -44,7 +42,7 @@
 }
 
 .icon-link:hover {
-  color: #61dafb;
+  color: #a259ff;
   transform: scale(1.1);
 }
 
