--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -1,20 +1,35 @@
+.intro-section {
+    animation: fadeInUp 1s ease;
+    margin: 0 0 20px 0;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .intro-wrapper {
     width: 100%;
     display: flex;
     align-items: center;
-    
 }
 
-.into-text {
-    margin: 0 40px;
+.intro-text {
+    padding: 0 40px;
     width: 50%;
     justify-content: center ;
     align-items: center;
+    color: #dce1e8;
 }
 
 .intro-image {
     width: 50%;
-    
 }
 
 .intro-image img {
@@ -22,12 +37,12 @@
     border-radius: 5%;
 }
 
-.into-text-title {
+.intro-text-title {
     margin: 0 0 15px 0;
     font-size: 24px;
 }
 
-.into-text-subtitle {
+.intro-text-subtitle {
     margin: 0 0 30px 0;
 }
 
@@ -37,21 +52,25 @@
 
 @media screen and (max-width: 768px) {
 
+.intro-section {
+    animation: fadeInUp 1s ease;
+    margin: 20px 0 0 0;
+}
+
 .intro-wrapper {
     flex-direction: column;
 }
 
-.into-text {
+.intro-text {
     width: 100%;
-    margin: 20px 0;
-    padding: 0 30px;
+    margin: 0 0 30px 0;
 }
 
 .intro-image {
     width: 100%;
 }
 
-.into-text-title {
+.intro-text-title {
     font-size: 20px;
 }
 
