--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,7 +13,6 @@
   width: 100%;
   max-width: 80px;
   max-height: 80px;
-  margin: 0 auto 0 0;
 }
 
 .header-icon a img {
@@ -22,13 +21,14 @@
 }
 
 .header-menu{
-  padding: 0 0 0 15px;
   width: 100%;
   max-width: 1920px;
+  margin: 0 auto;
 }
 
 .header-menu-wrapper{
   justify-content: space-around;
+  
 }
 
 .desktop-menu {
