--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   color: #fff;
-  padding: 15px 40px;
+  padding: 15px 40px 40px 40px;
 }
 
 .footer-wrapper {
@@ -68,10 +68,13 @@
 
  .footer-section {
   padding: 0 0 15px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .footer-list {
     justify-content: center;
+    margin: 0;
 }
 
  
